--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,6 +16,21 @@ body {
   color: white;
 }
 
+/* Logo */
+.nav-left .logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* Linki nawigacyjne */
+.nav-center a {
+  color: white;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 1rem;
+}
+
+
 .user-name {
   font-weight: bold;
 }
@@ -113,4 +128,15 @@ body {
   border-radius: 10px;
   width: 400px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.filters {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 15px;
+}
+
+.filters select {
+  padding: 5px;
+  font-size: 16px;
 }
